feat(web): switch to maplibre
this is very broken and wip
